# mpu6050-demo

./: .gitignore  CMakeLists.txt  README.md  main.c  pico-i2c-common
